--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
+<!DOCTYPE html>
 <html>
-
+<head>
+    <title>My first website!</title>
+    <link href="./resources/CSS/index.css" type="text/css" rel="stylesheet">
+</head>
 <body>
-  <h1>Hood178</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <h1>Robin Brosens</h1>
+    <p>I'm learning to code on Codecademy! My goals include:</p>
+    <ul>
+        <li>Learn to code</li>
+        <li>Start a company</li>
+        <li>Help the world</li>
+    </ul>
+    <p>Here are some things I like:</p>
+    <div>
+        <img src="./resources/Dodge.avif" width="500">
+        <img src="./resources/tails.jpeg">
+    </div>
+    <p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
 </body>
-
 </html>
