--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="./resources/CSS/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <h1>Robin Brosens</h1>
+    <h1>Hood178</h1>
     <p>I'm learning to code on Codecademy! My goals include:</p>
     <ul>
         <li>Learn to code</li>
