--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ul>
     <p>Here are some things I like:</p>
     <div>
-        <img src="./resources/Dodge.avif" width="500">
+        <img src="https://Hood178.github.io/Dodge.avif" width="500">
         <img src="./resources/tails.jpeg">
     </div>
     <p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
