--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>My first website!</title>
-    <link href="./resources/CSS/index.css" type="text/css" rel="stylesheet">
+    <link href="https://Hood178.github.io/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <h1>Hood178</h1>
@@ -15,7 +15,7 @@
     <p>Here are some things I like:</p>
     <div>
         <img src="https://Hood178.github.io/Dodge.avif" width="500">
-        <img src="./resources/tails.jpeg">
+        <img src="https://Hood178.github.io/tails.jpeg">
     </div>
     <p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
 </body>
